--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "guzzlehttp/guzzle": "^7.0.1",
         "laravel/framework": "^8.65",
         "laravel/sanctum": "^2.11",
-        "laravel/tinker": "^2.5"
+        "laravel/tinker": "^2.5",
+	"tjphippen/laddr": "~0.1-dev"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
@@ -46,6 +47,15 @@
         "post-create-project-cmd": [
             "@php artisan key:generate --ansi"
         ]
+    },
+    "repositories": {
+        "laddar": {
+            "type": "path",
+            "url": "packages/tjphippen/laddr",
+            "options": {
+                "symlink": true
+            }
+        }
     },
     "extra": {
         "laravel": {
